--- a/Views/partials/footer.ejs
+++ b/Views/partials/footer.ejs
@@ -3,8 +3,8 @@
     <img src='/images/brand.png' alt='brand'>
     <h3>BeezManager</h3>
    </div>
-   <div class='footerItem'>Home</div>
-   <div class='footerItem'>About</div>
+   <div class='footerItem'><a href='/'>Home</a></div>
+   <div class='footerItem'><a href=''>About</a></div>
    <div class='footerItem'>
     <h5>Follow BeezManager on</h5>
     <div class="footerIcons">
