--- a/Views/albums/detail.ejs
+++ b/Views/albums/detail.ejs
@@ -1,5 +1,5 @@
 <div>
-  <a href="/albums" class="btn btn-primary float-right">Go Back</a>
+  <a href="/albums" class="btn btn-primary">Go Back</a>
   <h1 class="text-white"><%= album.artist %> - <%= album.title %></h1>
   <div class="row">
     <div class="col-md-4">
