--- a/Views/layouts/layouts.ejs
+++ b/Views/layouts/layouts.ejs
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fontawesome.min.css" />
-
     <title>Document</title>
   </head>
   <body>
@@ -16,7 +15,7 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-3 mb-3">
             <ul class="list-group">
               <li class="list-group-item list-group-item-dark">
                 <a href="/albums">Albums</a>
