--- a/Views/partials/header.ejs
+++ b/Views/partials/header.ejs
@@ -20,7 +20,7 @@
           <a class="nav-link" href="/">Home</a>
        </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
       </ul>
 
